[gd_scene load_steps=6 format=3 uid="uid://ryk2rxuf4sbx"]

[ext_resource type="Script" uid="uid://dmsryopl4atwi" path="res://addons/sprouty_dialogs/editor/modules/settings/scripts/text_settings.gd" id="1_22qb6"]
[ext_resource type="Texture2D" uid="uid://bwd3ahxy81rbk" path="res://addons/sprouty_dialogs/editor/icons/text_editor/text.svg" id="2_fgisi"]
[ext_resource type="Texture2D" uid="uid://b7nifwp3mwmc3" path="res://addons/sprouty_dialogs/editor/icons/dialog_nodes/dialog_box.svg" id="3_kpwi1"]
[ext_resource type="Texture2D" uid="uid://cf5ef41yo6jl6" path="res://addons/dialogue_nodes/icons/Reload.svg" id="3_nqvb2"]
[ext_resource type="Texture2D" uid="uid://co8x6yovoum6i" path="res://addons/sprouty_dialogs/editor/icons/fast-forward.svg" id="4_kpwi1"]

[node name="TextSettings" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22qb6")

[node name="TextSettings" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TextSettings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextSettings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextTitle" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleIcon" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/TextTitle"]
layout_mode = 2
icon = ExtResource("2_fgisi")
flat = true

[node name="TitleLabel" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/TextTitle"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
text = "Text Behavior"

[node name="TypingSpeed" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Time in seconds that the text takes to reveal each character. 
The higher the number, the longer it will take to reveal the next character."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/TypingSpeed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Default typing speed"

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/TypingSpeed"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="TypingSpeedField" type="SpinBox" parent="TextSettings/ScrollContainer/VBoxContainer/TypingSpeed"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.001
value = 0.05
allow_greater = true
suffix = "s"

[node name="OpenURL" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Open the URL hyperlink when clicking on a URL tag during the dialogue.
By default the URL tags are handled by 'meta_clicked' signal on RichTextLabels.
You can do the same with the 'meta_clicked' signal in a DialogBox to more advanced use cases."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/OpenURL"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open URL on meta tag click"

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/OpenURL"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="OpenUrlOnMetaToggle" type="CheckButton" parent="TextSettings/ScrollContainer/VBoxContainer/OpenURL"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="---" type="HSeparator" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayTitle" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleIcon" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/DisplayTitle"]
layout_mode = 2
icon = ExtResource("3_kpwi1")
flat = true

[node name="DisplayLabel" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/DisplayTitle"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
text = "Dialogue Display"

[node name="NewLine" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Line breaks will be considered paragraphs. Each paragraph is displayed as a new dialog (or block of text in the dialog box).
Otherwise, the text is displayed all at once."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/NewLine"]
layout_mode = 2
size_flags_horizontal = 3
text = "New line as new dialogue"

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/NewLine"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="NewLineToggle" type="CheckButton" parent="TextSettings/ScrollContainer/VBoxContainer/NewLine"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="SplitDialog" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "The text is divided into paragraphs according to a max character limit.
Otherwise, it is displayed all at once."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/SplitDialog"]
layout_mode = 2
size_flags_horizontal = 3
text = "Split dialogue by max characters "

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/SplitDialog"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="SplitDialogToggle" type="CheckButton" parent="TextSettings/ScrollContainer/VBoxContainer/SplitDialog"]
unique_name_in_owner = true
layout_mode = 2

[node name="MaxCharacters" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Maximum character limit.
This is only used if the dialogue is splited by max characters."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/MaxCharacters"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max characters"

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/MaxCharacters"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="MaxCharacterField" type="SpinBox" parent="TextSettings/ScrollContainer/VBoxContainer/MaxCharacters"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true

[node name="----" type="HSeparator" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SkipTitle" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleIcon" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/SkipTitle"]
layout_mode = 2
icon = ExtResource("4_kpwi1")
flat = true

[node name="SkipLabel" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/SkipTitle"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
text = "Skip Text Reveal"

[node name="AllowSkipReveal" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Allows to skip text reveal and display everything at once."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/AllowSkipReveal"]
layout_mode = 2
size_flags_horizontal = 3
text = "Allow skip text reveal"

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/AllowSkipReveal"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="AllowSkipRevealToggle" type="CheckButton" parent="TextSettings/ScrollContainer/VBoxContainer/AllowSkipReveal"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="CanSkipDelay" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Time in seconds during which the text cannot be skipped again. 
This is necessary to prevent the entire text from being skipped."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/CanSkipDelay"]
layout_mode = 2
size_flags_horizontal = 3
text = "Can skip delay"

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/CanSkipDelay"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="CanSkipDelayField" type="SpinBox" parent="TextSettings/ScrollContainer/VBoxContainer/CanSkipDelay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.001
value = 0.1
allow_greater = true
suffix = "s"

[node name="SkipContinueDelay" type="HBoxContainer" parent="TextSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Time in seconds during which you must wait for the dialogue to continue after skipping the text reveal."

[node name="Label" type="Label" parent="TextSettings/ScrollContainer/VBoxContainer/SkipContinueDelay"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skip continue delay"

[node name="ResetButton" type="Button" parent="TextSettings/ScrollContainer/VBoxContainer/SkipContinueDelay"]
layout_mode = 2
icon = ExtResource("3_nqvb2")
flat = true

[node name="SkipContinueDelayField" type="SpinBox" parent="TextSettings/ScrollContainer/VBoxContainer/SkipContinueDelay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.001
value = 0.1
allow_greater = true
suffix = "s"

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "text"
